att 9 for front end, new operations for front end teachers functions, routes